optimize images, fix overflow

--- a/src/app/about/About.module.scss
+++ b/src/app/about/About.module.scss
@@ -6,7 +6,7 @@
 
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow-x: hidden;
 
   h1 {
     font-size: 60px;
