--- a/src/components/ProjectCard/ProjectCard.module.scss
+++ b/src/components/ProjectCard/ProjectCard.module.scss
@@ -18,16 +18,11 @@
 }
 
 .img {
-  width: auto;
-  height: 150px;
-
   border-bottom: 1px solid #e3e4e9;
 
   padding: 8px;
 
   img {
-    width: 100%;
-    height: 100%;
     object-fit: cover;
     object-position: top;
   }
