--- a/src/components/Techs/Techs.module.scss
+++ b/src/components/Techs/Techs.module.scss
@@ -10,8 +10,6 @@
   margin: 0 16px;
 
   img {
-    width: 50px;
-    height: 50px;
     object-fit: contain;
   }
 }
